--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "docx": "^9.0.3",
+    "file-saver": "^2.0.5",
     "heroicons": "^1.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
