--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docx": "^9.0.3",
     "file-saver": "^2.0.5",
     "heroicons": "^1.0.6",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
