--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Default Dark Modern",
+    "workbench.colorTheme": "Tomorrow Night Blue",
     "workbench.preferredDarkColorTheme": "Default Dark Modern",
     "editor.tabSize": 2
 }
